logs/swifpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swifpy'...
Compiling './lib/python3.5/site-packages/swifpy/array.py'...
***   File "./lib/python3.5/site-packages/swifpy/array.py", line 24
    self._values: tp.List[T] = py.list(values)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swifpy/dictionary.py'...
***   File "./lib/python3.5/site-packages/swifpy/dictionary.py", line 11
    self._entries: tp.Dict[K, V] = py.dict(entries)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swifpy-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
